# automated_test

./: README.md  pyproject.toml
tests/: test_ScholarshipEligibilityEvaluator.py
